# C-Course

./: README.md
1sem/labwork1-hizu77/: main.cpp
1sem/labwork1-hizu77-main/: README.md
1sem/labwork2-hizu77-main/: README.md
1sem/labwork2-hizu77/lib/: CMakeLists.txt  functions.cpp  functions.h  number.cpp  number.h
1sem/labwork3-hizu77/: CMakeLists.txt  README.md
1sem/labwork3-hizu77/lib/: Bitmap.cpp  Bitmap.h  Output.cpp  Output.h  Parser.cpp  Parser.h  Scaning.cpp  Scaning.h
1sem/labwork4-hizu77/: README.md
1sem/labwork4-hizu77/lib/: ArgParser.cpp  ArgParser.h  Arguments.cpp  Arguments.h
1sem/labwork5-hizu77/: CMakeLists.txt
1sem/labwork5-hizu77-main/: README.md
1sem/labwork5-hizu77/lib/: CMakeLists.txt  Reference.cpp  Reference.h  ThreeDArray.cpp  ThreeDArray.h
1sem/labwork5-hizu77/tests/: CMakeLists.txt  array_tests.cpp
1sem/labwork6-hizu77/: CMakeLists.txt
1sem/labwork6-hizu77-main/: README.md
1sem/labwork6-hizu77/lib/: Archiver.cpp  Archiver.h  ArgParser.cpp  ArgParser.h  CMakeLists.txt  FileHeader.cpp  FileHeader.h  FileOperation.cpp  FileOperation.h  Hamming.cpp  Hamming.h
1sem/labwork6-hizu77/tests/: CMakeLists.txt  tests.cpp
2sem/labwork10-hizu77/: CMakeLists.txt
2sem/labwork10-hizu77/lib/: CMakeLists.txt  TaskScheduler.h  any.h
2sem/labwork10-hizu77/test/: CMakeLists.txt  tests.cpp
2sem/labwork11-hizu77/: CMakeLists.txt
2sem/labwork11-hizu77-main/: README.md
2sem/labwork11-hizu77/lib/: CMakeLists.txt
2sem/labwork11-hizu77/lib/FilesHeader/: CMakeLists.txt  FileInfo.cpp  FileInfo.h
2sem/labwork11-hizu77/lib/IndexManager/: CMakeLists.txt  IndexManager.cpp  IndexManager.h
2sem/labwork11-hizu77/lib/OperationController/: CMakeLists.txt  OperationController.cpp  OperationController.h
2sem/labwork11-hizu77/lib/ProgramManager/: CMakeLists.txt  ProgramManager.cpp  ProgramManager.h
2sem/labwork11-hizu77/lib/SearchManager/: CMakeLists.txt  SerachManager.cpp  SerachManager.h
2sem/labwork11-hizu77/lib/varint/: CMakeLists.txt  varint.cpp  varint.h
2sem/labwork11-hizu77/tests/: CMakeLists.txt  tests.cpp
2sem/labwork7-hizu77/: CMakeLists.txt  README.md
2sem/labwork7-hizu77/lib/: CMakeLists.txt
2sem/labwork7-hizu77/lib/CityData/: CMakeLists.txt  CityData.cpp  CityData.h  DayParameters.cpp  DayParameters.h
2sem/labwork7-hizu77/lib/ConfigParser/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h
2sem/labwork7-hizu77/lib/DataManipulator/: CMakeLists.txt  DataManipulator.cpp  DataManipulator.h
2sem/labwork7-hizu77/lib/ProgramManipulator/: CMakeLists.txt  ProgramManipulator.cpp  ProgramManipulator.h
2sem/labwork8-hizu77/: CMakeLists.txt  README.md
2sem/labwork8-hizu77-main/: README.md
2sem/labwork8-hizu77/lib/: BinarySearchTree.h  CMakeLists.txt
2sem/labwork8-hizu77/test/: CMakeLists.txt  array_tests.cpp
2sem/labwork9-hizu77/: CMakeLists.txt
2sem/labwork9-hizu77/lib/: Adapters.h  CMakeLists.txt  FilterAdapter.h  KeysValuesAdapter.h  ReverseAdapter.h  TakeAdapter.h  TransformAdapter.h
2sem/labwork9-hizu77/test/: CMakeLists.txt  array_tests.cpp
